cleanup Makefile and write descriptions of various parameters

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,26 +1,58 @@
-.PHONY: casimir casimir_tests casimir_hiT casimir_logdetD
+.PHONY: clean doc casimir casimir_tests casimir_hiT casimir_logdetD
 all: casimir casimir_hiT casimir_logdetD casimir_tests
 
-# Use extended doubles for calculations. gcc and icc implement long double as
-# 80-bit extended precision type by x86 hardware This is less precise than
-# quadrupule precision, but should be much faster.
-EXTENDED_DOUBLE = 1
+SOURCES  = sfunc.c integration.c integration_perf.c libcasimir.c matrix.c utils.c
+CFLAGS  += -Werror -Wall -Wmissing-prototypes -Wstrict-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -fno-common
+LDFLAGS += -lm -pthread
 
-# use lapack to calculate determinant
-USE_LAPACK = 1
 
-# compile. You may use gcc or icc.
+# Choose a compiler.
+#
+# At the moment gcc and icc are supported.
 CC = gcc
 #CC = icc
 
-SOURCES = sfunc.c integration.c integration_perf.c libcasimir.c matrix.c utils.c
-CFLAGS += -Werror -Wall -Wmissing-prototypes -Wstrict-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -fno-common
 
-# -DNDEBUG will disable asserts. This hardly increases performance and in case
-# of errors the program won't abort.
-#CFLAGS += -DNDEBUG
+# Use extended doubles for calculations.
+#
+# gcc and icc implement long double as 80-bit extended precision type on x86
+# hardware. Extended doubles are less precise than quadrupule precision, but
+# are much faster (approximately by a factor of 40).
+#
+# To use quadruple precision, comment out the line.
+#
+# If you don't know what to do here, set EXTENDED_DOUBLE to 1.
+USE_EXTENDED_DOUBLE = 1
 
-LDFLAGS += -lm -pthread 
+
+# Use LAPACK to calculate the determinant.
+#
+# If you define USE_LAPACK, the LAPACK routine dgetrf will be used to perform
+# LU decompositions. The use of LAPACK is slightly faster, but LAPACK only
+# operates on doubles. This will increase the precision. For very small values
+# of the determinant, this will cause wrong results.
+#
+# Example: (no LAPACK support)
+# For T=10, x=0.0075, lmax=800, n=131 and m=64:
+#   log(det D) = 0                                      using LAPACK
+#   log(det D) = -5.45180220412611e-15          without using LAPACK
+#
+# If you don't know what to say here, comment out the line.
+# USE_LAPACK = 1
+
+
+# Disable additional checks and assertions.
+#
+# This option will cause the program to perform additional checks. If an error
+# occures, a error message will be printed and the program will be terminated.
+# Without this option, the program will proceed calculating and return
+# incorrect results, most likely NANs.
+#
+# Disabling this option will slightly increase performance.
+#
+# If you don't know what to say here, enable checks.
+CFLAGS += -DNDEBUG
+
 
 ifdef USE_LAPACK
     CFLAGS += -DUSE_LAPACK
@@ -36,7 +68,7 @@ ifeq ($(CC),icc)
 endif
 
 # if we need quadrupole precision
-ifdef EXTENDED_DOUBLE
+ifdef USE_EXTENDED_DOUBLE
     CFLAGS += -DEXTENDED_DOUBLE
 else
     ifeq ($(CC),gcc)
@@ -67,5 +99,3 @@ clean:
 
 doc:
 	doxygen doxygen.conf
-
-.PHONY: clean doc
