--- a/src/doxygen.conf
+++ b/src/doxygen.conf
@@ -581,7 +581,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = mainpage.dox libcasimir.c sfunc.c
+INPUT                  = mainpage.dox libcasimir.c sfunc.c integration_drude.c integration_perf.c utils.c matrix.c
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
