--- a/src/doxygen.conf
+++ b/src/doxygen.conf
@@ -581,7 +581,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = mainpage.dox libcasimir.c sfunc.c integration_drude.c integration_perf.c utils.c matrix.c
+INPUT                  = mainpage.dox libcasimir.c libcasimir.h sfunc.c sfunc.h integration_drude.c integratio_drude.h integration_perf.c integration_perf.h utils.c utils.h matrix.c matrix.h
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
