--- a/src/Makefile
+++ b/src/Makefile
@@ -110,7 +110,7 @@ install:
 	cp casimir casimir_tests casimir_hiT casimir_logdetD casimir_Fn ld_drude casimir_T0 ${TARGET}
 
 clean:
-	rm -f casimir casimir_tests casimir_hiT casimir_logdetD *.o casimir_Fn ld_drude casimir_psd
+	rm -f casimir casimir_tests casimir_hiT casimir_logdetD *.o casimir_Fn ld_drude casimir_T0
 
 doc:
 	doxygen doxygen.conf
