options to enable/disable support for FLOAT128 and FLOATDD

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,5 @@
 .PHONY: clean doc casimir casimir_logdetD casimir_hiT casimir_Fn ld_drude casimir_T0 casimir_tests
-all: casimir
-#casimir_hiT casimir_logdetD casimir_Fn ld_drude casimir_T0 casimir_tests
+all: casimir casimir_logdetD casimir_tests
 
 # Choose a compiler.
 #
@@ -11,22 +10,6 @@ CXX = g++
 MPICC = mpicc
 #MPICC = mpiicc
 
-# use C99 standard
-CFLAGS  = -std=c99
-# use traditional GNU semantics for inline
-CFLAGS += -fgnu89-inline
-CFLAGS += -I .
-# enable warnings and make them fatal
-CFLAGS += -Werror -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter
-
-CXXFLAGS = 
-LDFLAGS += -lm -pthread -lqd
-
-TARGET = "../bin/"
-
-# optimize for native CPU
-OPT = -march=native -flto -O3
-
 OBJS = \
     gausslaguerre.o \
     integration_drude.o \
@@ -35,7 +18,6 @@ OBJS = \
     matrix.o \
     sfunc.o \
     utils.o \
-    dd.o
 
 TESTS = \
     tests/test_bessels.o \
@@ -55,12 +37,33 @@ TESTS = \
     tests/tests.o \
     tests/unittest.o
 
+# use C99 standard
+CFLAGS  = -std=c99
+# use traditional GNU semantics for inline
+CFLAGS += -fgnu89-inline
+CFLAGS += -I .
+CFLAGS += -DEXPERIMENTAL_FEATURES
+# enable warnings and make them fatal
+CFLAGS += -Werror -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter
+
+CXXFLAGS = 
+LDFLAGS += -lm -pthread
+
 # support float128
 CFLAGS += -DFLOAT128
 LDFLAGS += -lquadmath
 
+# support double-double arithmetics
+CFLAGS += -DFLOATDD
 QD_INC = qd-2.3.17/include
 QD_LIB = qd-2.3.17/src/.libs/
+LDFLAGS += -L $(QD_LIB) -lqd
+OBJS += dd.o
+
+TARGET = "../bin/"
+
+# optimize for native CPU
+OPT = -march=native -flto -O3
 
 # Disable additional checks and assertions.
 #
@@ -74,7 +77,6 @@ QD_LIB = qd-2.3.17/src/.libs/
 # If you don't know what to say here, comment out the line.
 # CFLAGS += -DNCHECKS
 
-CFLAGS += -D CASIMIR_DETALG="\"DEBUG\""
 
 %.o : %.c
 	$(CC) $(CFLAGS) $(OPT) -o $@ -c $<
@@ -86,26 +88,26 @@ dd.o :
 	$(CXX) $(CXXFLAGS) $(OPT) -I $(QD_INC) -o dd.o -c dd.cpp
 
 casimir: casimir.o $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OPT) -L $(QD_LIB) $^ $(LDFLAGS) -o casimir
+	$(CXX) $(CXXFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir
 
 casimir_logdetD: casimir_logdetD.o $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OPT) -L $(QD_LIB) $^ $(LDFLAGS) -o casimir_logdetD
+	$(CXX) $(CXXFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_logdetD
 
 casimir_hiT: casimir_hiT.o $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OPT) -L $(QD_LIB) $^ $(LDFLAGS) -o casimir_hiT
+	$(CXX) $(CXXFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_hiT
 
 casimir_Fn: casimir_Fn.o $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OPT) -L $(QD_LIB) $^ $(LDFLAGS) -o casimir_Fn
+	$(CXX) $(CXXFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_Fn
 
 ld_drude: ld_drude.o $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OPT) -L $(QD_LIB) $^ $(LDFLAGS) -o ld_drude
+	$(CXX) $(CXXFLAGS) $(OPT) $^ $(LDFLAGS) -o ld_drude
 
 casimir_tests: $(TESTS) $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OPT) -L $(QD_LIB) $^ $(LDFLAGS) -o casimir_tests
+	$(CXX) $(CXXFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_tests
 	time ./casimir_tests
 
 casimir_T0: casimir_T0.o $(OBJS)
-	$(MPICC) $(CXXFLAGS) $(OPT) -L $(QD_LIB) $^ $(LDFLAGS) -o casimir_T0
+	$(MPICC) $(CXXFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_T0
 
 install:
 	cp casimir casimir_tests casimir_hiT casimir_logdetD casimir_Fn ld_drude casimir_T0 ${TARGET}
