Added header dependencies for all targets

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-.PHONY: clean doc casimir casimir_logdetD casimir_hiT casimir_Fn ld_drude casimir_T0 casimir_tests dependencies
+.PHONY: clean doc casimir casimir_logdetD casimir_hiT casimir_Fn ld_drude casimir_T0 casimir_tests dependencies dependencies_test
 all: casimir casimir_logdetD casimir_tests
 
 # Choose a compiler.
@@ -63,9 +63,15 @@ TARGET = "../bin/"
 OPT = -march=native -O3
 OPT +=-flto
 
+# This file contains header dependencies. dependencies and dependencies_test will update this file.
+DEPEND_FILE = .depend
+
 dependencies: $(OBJS:.o=.c)
-	$(CC) -MM $^ > ./.depend
--include .depend
+	rm -f $(DEPEND_FILE)
+	$(CC) $(CFLAGS) -MM $^ > $(DEPEND_FILE)
+dependencies_test: $(TESTS:.o=.c) dependencies
+	$(CC) $(CFLAGS) -MM $(TESTS:.o=.c) | sed 's/.*/tests\/&/g' >> $(DEPEND_FILE)
+-include $(DEPEND_FILE)
 
 %.o : %.c
 	$(CC) $(CFLAGS) $(OPT) -o $@ -c $<
@@ -76,30 +82,30 @@ casimir_T0.o:
 casimir: casimir.o $(OBJS) dependencies
 	$(CC) $(CFLAGS) $(OPT) casimir.o $(OBJS) $(LDFLAGS) -o casimir
 
-casimir_logdetD: casimir_logdetD.o $(OBJS)
-	$(CC) $(CFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_logdetD
+casimir_logdetD: casimir_logdetD.o $(OBJS) dependencies
+	$(CC) $(CFLAGS) $(OPT) casimir_logdetD.o $(OBJS) $(LDFLAGS) -o casimir_logdetD
 
-casimir_hiT: casimir_hiT.o $(OBJS)
-	$(CC) $(CFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_hiT
+casimir_hiT: casimir_hiT.o $(OBJS) dependencies
+	$(CC) $(CFLAGS) $(OPT) casimir_hiT.o $(OBJS) $(LDFLAGS) -o casimir_hiT
 
-casimir_Fn: casimir_Fn.o $(OBJS)
-	$(CC) $(CFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_Fn
+casimir_Fn: casimir_Fn.o $(OBJS) dependencies
+	$(CC) $(CFLAGS) $(OPT) casimir_Fn.o $(OBJS) $(LDFLAGS) -o casimir_Fn
 
-ld_drude: ld_drude.o $(OBJS)
-	$(CC) $(CFLAGS) $(OPT) $^ $(LDFLAGS) -o ld_drude
+ld_drude: ld_drude.o $(OBJS) dependencies
+	$(CC) $(CFLAGS) $(OPT) ld_drude.o $(OBJS) $(LDFLAGS) -o ld_drude
 
-casimir_tests: $(TESTS) $(OBJS)
-	$(CC) $(CFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_tests
+casimir_tests: $(TESTS) $(OBJS) dependencies_test
+	$(CC) $(CFLAGS) $(OPT) $(TESTS) $(OBJS) $(LDFLAGS) -o casimir_tests
 	./casimir_tests
 
-casimir_T0: casimir_T0.o $(OBJS)
-	$(MPICC) $(CFLAGS) $(OPT) $^ $(LDFLAGS) -o casimir_T0
+casimir_T0: casimir_T0.o $(OBJS) dependencies
+	$(MPICC) $(CFLAGS) $(OPT) casimir_T0.o $(OBJS) $(LDFLAGS) -o casimir_T0
 
 install:
 	cp casimir casimir_tests casimir_hiT casimir_logdetD casimir_Fn ld_drude casimir_T0 ${TARGET}
 
 clean:
-	rm -f casimir casimir_tests casimir_hiT casimir_logdetD casimir_Fn ld_drude casimir_T0 *.o tests/*.o
+	rm -f casimir casimir_tests casimir_hiT casimir_logdetD casimir_Fn ld_drude casimir_T0 *.o tests/*.o $(DEPEND_FILE)
 	rm -rf doc
 
 doc:
