--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,7 @@ MPICC = mpicc
 
 OBJS = \
     gausslaguerre.o \
-    integration_drude.o \
+    integration.o \
     integration_perf.o \
     libcasimir.o \
     matrix.o \
