add option for profiling

--- a/src/Makefile
+++ b/src/Makefile
@@ -40,6 +40,8 @@ CFLAGS += -I .
 
 # enable warnings and make them fatal
 CFLAGS += -Wall -Werror -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wshadow -Wpointer-arith -Wcast-qual -Wwrite-strings -Wno-unused-parameter
+# profiling
+#CFLAGS += -g -pg
 
 # ldflags
 LDFLAGS += -lm -pthread -llapack -lblas -lgfortran
